--- a/package.json
+++ b/package.json
@@ -11,21 +11,22 @@
   "license": "ISC",
   "type": "module",
   "description": "",
- "dependencies": {
-		"@apollo/server": "^4.10.0",
-		"@graphql-tools/merge": "^9.0.3",
-		"bcryptjs": "^2.4.3",
-		"connect-mongodb-session": "^5.0.0",
-		"cron": "^3.1.6",
-		"dotenv": "^16.4.5",
-		"express": "^4.18.2",
-		"express-session": "^1.18.0",
-		"graphql": "^16.8.1",
-		"graphql-passport": "^0.6.8",
-		"mongoose": "^8.2.0",
-		"passport": "^0.7.0"
-	},
-	"devDependencies": {
-		"nodemon": "^3.1.0"
-	}
+  "dependencies": {
+    "@apollo/server": "^4.10.0",
+    "@graphql-tools/merge": "^9.0.3",
+    "bcryptjs": "^2.4.3",
+    "connect-mongo": "^5.1.0",
+    "connect-mongodb-session": "^5.0.0",
+    "cron": "^3.1.6",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "express-session": "^1.18.0",
+    "graphql": "^16.8.1",
+    "graphql-passport": "^0.6.8",
+    "mongoose": "^8.2.0",
+    "passport": "^0.7.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
