--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "Backend/index.js",
   "scripts": {
-    "start": "node Backend/index.js",
-    "dev": "npx nodemon Backend/index.js"
+    "start": "cross-env NODE_ENV=production node Backend/index.js",
+    "dev": "cross-env NODE_ENV=development npx nodemon Backend/index.js",
+    "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +28,7 @@
     "passport": "^0.7.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "nodemon": "^3.1.0"
   }
 }
